Issue #SB-20120 HE: Download button is not rendering, SB-21029 Table are not showing side by side

--- a/src/app/client/src/app/modules/dashboard/components/report/report.component.scss
+++ b/src/app/client/src/app/modules/dashboard/components/report/report.component.scss
@@ -90,3 +90,7 @@
         }
     }
 }
+.sbt-report-btns-panel{
+    margin-top: calculateRem(1px);
+    background: var(--white);
+}
